unit_tests/preprocessor/errors/macro-with-comma-after-params.correct
preprocessor/errors/macro-with-comma-after-params:2: error: syntax error in macro parameter list
